# DirectXHelper

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt
DX12Helper/: AutoTimer.h  CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandObjects.cpp  CommandObjects.h  CommandQueue.cpp  CommandQueue.h  D3DApp.cpp  D3DApp.h  D3DUtils.cpp  D3DUtils.h  DefaultBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  DrawCommands.cpp  DrawCommands.h  Fence.cpp  Fence.h  Geometry.cpp  Geometry.h  ImGuiApp.cpp  ImGuiApp.h  ObjMesh.h  PCH.h  RenderContext.cpp  RenderContext.h  RenderGeometry.h  Resources.cpp  Resources.h  RootSignature.h  Shader.cpp  Shader.h  Shapes.h  SwapChain.cpp  SwapChain.h  Timer.h  (+2 more)
DX12Helper/Geometry/: Geometry.h  GeometryRender.cpp  GeometryRender.h  MeshFactory.h  SimpleVertex.cpp  SimpleVertex.h
DX12Helper/Render/: Camera.h  RenderCommand.h
DX12Helper/Resources/: Buffers.cpp  Buffers.h  DescriptorHeap.cpp  DescriptorHeap.h  ResourceManager.h  Resources.cpp  Resources.h  Textures.h
DX12Helper/Utils/: AutoTimer.h  D3DUtils.cpp  D3DUtils.h  DXMathUtils.cpp  DXMathUtils.h  Timer.h
Demo/0_SolidColor/: CMakeLists.txt  SolidColorWindow.cpp
Demo/1_Triangle/: CMakeLists.txt  Triangle.cpp  shader.hlsl
Demo/2_Box/: Box.cpp  CMakeLists.txt  shaders.hlsl
Demo/3_Instancing/: Boxes.cpp  CMakeLists.txt  Culling.cpp  Culling.h  Instances.cpp  Instances.h  Octree.cpp  Octree.h  README.md  shaders.hlsl
Demo/Utils/: DemoUtils.cmake
DirectX-Header/: CMakeLists.txt
DirectX-Header/lib/: DirectX-Guids.lib  DirectX-Headers.lib
DirectX-Header/lib/pkgconfig/: DirectX-Headers.pc
DirectX-Header/share/directx-headers/cmake/: directx-headers-config-version.cmake
Test/: SolidColorWindow.cpp  shaders.hlsl  test_app.cpp  test_cs.hlsl
Test/1_Triangle/: Triangle.cpp  shader.hlsl
spdlog/: CMakeLists.txt
